[gd_scene load_steps=2 format=3 uid="uid://gkqjq7oj88xf"]

[ext_resource type="Script" uid="uid://byfyitv6kgyg2" path="res://scripts/color_control.gd" id="1_j26vk"]

[node name="ColorControl" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 909.0
offset_top = 362.0
offset_right = 1037.0
offset_bottom = 490.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_j26vk")

[node name="VSliderRed" type="VSlider" parent="."]
layout_mode = 0
offset_left = -22.0
offset_top = 2.0
offset_right = 23.0
offset_bottom = 113.0
max_value = 1.0
step = 0.01

[node name="VSliderGreen" type="VSlider" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 2.0
offset_right = 77.0
offset_bottom = 113.0
max_value = 1.0
step = 0.01

[node name="VSliderBlue" type="VSlider" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 2.0
offset_right = 131.0
offset_bottom = 113.0
max_value = 1.0
step = 0.01

[node name="VSliderAlpha" type="VSlider" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 2.0
offset_right = 185.0
offset_bottom = 113.0
max_value = 1.0
step = 0.01

[node name="VectorLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.344
anchor_top = 1.0
anchor_right = -0.344
anchor_bottom = 1.0
offset_left = -10.968
offset_top = 8.0
offset_right = 243.032
offset_bottom = 57.0
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "vec4(1.0, 0.0, 1.0, 1.0);"
